change zoom image plugin

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@vtex/store-ui": "^1.2.18",
     "babel-loader": "^8.2.2",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-image-zoom": "^0.0.2",
     "file-loader": "^6.2.0",
-    "plugin-image-zoom": "github:ataft/plugin-image-zoom",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
