--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
+    "build": "docusaurus build && cp -a ./build/. ./public/ && cp ./nginx.conf ./public",
+    "docker:serve": "sed -i -e 's/\\$PORT/80/' public/nginx.conf && docker run --rm --name local_nginx -v \"$PWD/public/nginx.conf:/etc/nginx/nginx.conf\" -v \"$PWD/public:/etc/nginx/html\" -p 80:80 -it fholzer/nginx-brotli@sha256:ebaf3265a9e21dcd4ddfe44b22d6c4d8fdec563c9a0afd69097f286fd8a0eb00",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
